<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">三方物流</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="welcome_text">同心同路公司版权所有</string>
    
    <!-- common -->
    <string name="back">返回</string>
    <string name="confirm">确认</string>
	<string name="cancel">取消</string>
    
    <!-- login -->
    <string name="username">用户名</string>
    <string name="password">密码</string>
    <string name="login_role_shipping_point">托运点</string>
    <string name="login_role_driver">司机</string>
    <string name="login">登录</string>
    <string name="login_text_empty_password">密码不能为空</string>
    <string name="login_text_network_not_connected">网络未连接</string>
    <string name="login_text_is_loginning">正在登录</string>
    <string name="login_dialog_is_loginning">正在登录</string>
	<string name="login_text_login_success">登录成功</string>
	<string name="login_text_login_failed">登录失败</string>
    <string name="login_text_login_auth_failed">用户名或密码错误</string>
	
	<!-- scan code -->
	<string name="scan_code_title">条形码扫描</string>
	<string name="in_port_scan_code">进港扫码</string>
	<string name="out_port_scan_code">出港扫码</string>
	<string name="deliver_scan_code">交付扫码</string>
    <string name="scan_tips">将条形码图片对准扫描框即可自动扫描</string>
    <string name="scan_dialog_is_processing">正在处理</string>
	<string name="scan_result">扫描结果</string>
	
	<!-- confirm express -->
	<string name="confirm_express_id">确认快递单号</string>
	<string name="confirm_info_text_1">您确认对快递单号为：</string>
	<string name="confirm_info_text_2">的快递进行</string>
	<string name="confirm_info_text_3">吗？</string>
	
	<!-- scan code result -->
	<string name="in_port_scan_code_result_success">进港扫码成功！</string>
	<string name="in_port_scan_code_result_failed">进港扫码失败！</string>
	<string name="out_port_scan_code_result_success">出港扫码成功！</string>
	<string name="out_port_scan_code_result_failed">出港扫码失败！</string>
	<string name="deliver_scan_code_result_success">交付扫码成功！</string>
	<string name="deliver_scan_code_result_failed">交付扫码失败！</string>
</resources>
