<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/et_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:singleLine="true" />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:maxLines="1"
        android:singleLine="true" />

    <RadioGroup
        android:id="@+id/rg_role"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/rb_role_shipping_point"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_role_shipping_point"
            android:checked="true" >
        </RadioButton>

        <RadioButton
            android:id="@+id/rb_role_driver"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_role_driver" >
        </RadioButton>
    </RadioGroup>

    <Button
        android:id="@+id/btn_login"
        style="?android:textAppearanceSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/login"
        android:textStyle="bold" />

</LinearLayout>